Quick media queries added
More changes to be made later.

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 				<p>I know, I know, everyone loves San Francisco. I do, too! You don’t have to rush into the city during your Northern California visit, though. In fact, it’s a good idea to pace yourself, especially if you’re traveling with children. Starting in San Francisco’s neighboring cities, Oakland and Berkeley, is a great way to start your vacation, and set the tone for the trip. Besides, they’re both extraordinarily family-friendly, with plenty to do and lots to keep the kiddos occupied and engaged.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<img src="images/brandi/oakland.jpg">
 				<div class="caption">
 					<p>Oakland at night. <span class="italc cred inline">Getty Images</span></p>
 				</div>
@@ -1047,7 +1047,7 @@
 				<p>Forty miles east of Yosemite Valley sits Mono Lake (“Mono” rhymes with “yoyo,” FYI), with its otherworldly landscape of strange rock forms. The visitor center, just off U.S. 395 north of Lee Vining and Tioga Pass, offers a wealth of information and scientific exploration.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<!-- <img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg"> -->
 			</div>
 		</div>
 	</div>
@@ -1158,7 +1158,7 @@
 				<p>No family vacation is complete without indulging in something sweet. After sights like Sequoia National Park, home to some of the largest trees in the world, make a pit stop in Hanford at <span class="bold">Superior Dairy</span>. Settle into the charming vinyl booths and enjoy freshly made, classic and seasonal scoops. Bon appetite!</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<!-- <img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg"> -->
 			</div>
 		</div>
 	</div>
