Tweaking the hero svg
to support the new direction.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,26 @@
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
 	<polygon class="bg-diamond" points="714.6 212.3 357 424.6 0 212.3 357.3 0 "/>
 	<polygon class="st1" points="695.2 212.3 356.8 413.2 19 212.3 357.1 11.4 "/>
-	<text transform="matrix(1 0 0 1 267.073 121.6203)" class="state">state</text><text transform="matrix(1 0 0 1 267.1209 202.5311)" class="play">play</text><line class="st6" x1="273.8" y1="140.3" x2="333.8" y2="140.3"/><line class="st6" x1="380.8" y1="140.3" x2="440.8" y2="140.3"/><text transform="matrix(1 0 0 1 345.5594 147.7191)" class="of italc">of</text><rect x="164.5" y="225.7" class="txt-bx" width="385.5" height="68.2"/><text transform="matrix(1 0 0 1 180.3961 237.5967)"><tspan class="dek">Discover why a trip to California makes the ultimate </tspan><tspan x="-13.1" y="20" class="dek">family vacation. Explore northern, central, and southern </tspan><tspan x="88.4" y="40" class="dek">California’s places to play.</tspan></text><text transform="matrix(1 0 0 1 277.9373 356.616)" class="california">California</text><text transform="matrix(1 0 0 1 286.526 323.2844)" class="southern italc">southern</text><rect x="279.7" y="299.7" class="st1" width="155.2" height="31.5"/><polygon points="418 312.8 427.8 312.8 422.9 308.1 "/><polygon points="418 317.5 427.8 317.5 422.9 322.3 "/><polygon points="342.9 386.9 371.6 386.9 357.2 395 "/>
+	<text transform="matrix(1 0 0 1 267.073 121.6203)" class="state">state</text><text transform="matrix(1 0 0 1 267.1209 202.5311)" class="play">play</text><line class="st6" x1="273.8" y1="140.3" x2="333.8" y2="140.3"/><line class="st6" x1="380.8" y1="140.3" x2="440.8" y2="140.3"/><text transform="matrix(1 0 0 1 345.5594 147.7191)" class="of italc">of</text><rect x="164.5" y="225.7" class="txt-bx" width="385.5" height="68.2"/><text class="dek-wrap" transform="matrix(1 0 0 1 180.3961 237.5967)"><tspan class="dek">Discover why a trip to California makes the ultimate </tspan><tspan x="-13.1" y="20" class="dek">family vacation. Explore northern, central, and southern </tspan><tspan x="88.4" y="40" class="dek">California’s places to play.</tspan></text><text transform="matrix(1 0 0 1 277.9373 356.616)" class="california">California</text><text transform="matrix(1 0 0 1 286.526 323.2844)" class="southern italc">southern</text><rect x="279.7" y="299.7" class="st1 pink-rect" width="155.2" height="31.5"/><polygon class="drpdwn" points="418 312.8 427.8 312.8 422.9 308.1 "/><polygon class="drpdwn" points="418 317.5 427.8 317.5 422.9 322.3 "/><polygon points="342.9 386.9 371.6 386.9 357.2 395 "/>
 	</svg>
 </section>
+
+<!-- <section class="region-hero full-page" id="main-hero">
+	<img src="assets/VCA_white.gif" class="vca-hero-logo">
+	<img class="title-trtmnt" src="images/FPO-new-title-trtmnt.png">
+	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
+		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
+		<text transform="matrix(1 0 0 1 118.4586 255.3635)" class="state shad">California</text>
+		<text transform="matrix(1 0 0 1 138.4766 193.3493)" class="region-loc shad italc">SOUTHERN</text>
+		<polygon class="diamond" points="677.7 201.8 339.2 402.7 1.5 201.8 339.6 0.9 "/>
+		<text transform="matrix(1 0 0 1 116.4586 253.3635)" class="state">California</text>
+		<text transform="matrix(1 0 0 1 136.4766 191.3493)" class="region-loc italc">SOUTHERN</text>
+	</svg>
+	<video autoplay loop muted>
+		<source src="video/VCA_Family_Hero_Southern_v2.webmhd.webm" type="video/webm">
+		<source src="video/VCA_Family_Hero_Southern_v2.mp4" type="video/mp4">Your browser does not support the video tag.
+	</video>
+</section> -->
 
 <section class="container-fluid toc clearfix" id="toc">
 	<div class="row">
