Added TM'd Logos
And placed on pages

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter">here</a>.</p>
-				<img src="assets/VCA_color.gif" class="vca-logo-color">
+				<img src="assets/CA Logo_Dream Big_Color.png" class="vca-logo-color">
 			</div>
 		</div>
 </section>
