Styled listings properly
+Fixed ToC Surf-Skate link
Bg still not working

--- a/index.html
+++ b/index.html
@@ -1610,13 +1610,13 @@
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="surf-skate-container surf-bg">
-				<div class="col-md-12 col-md-offset-1">
+				<div class="col-md-6 col-md-offset-1">
 					<div class="surf-skate-title">
 						In The </br> <span class="surf-skate-title-accent">Water</span>
 					</div>
 					<ul class="scroll-list">
 						<li class="list-surf-skate" id="list-surf-1">
-							<div class="col-md-6">
+							<div class="col-md-12">
 								<div class="scroll-list-box">
 									<div class="box-header">
 										<span class="best-for">Best for:</span>
@@ -1627,7 +1627,7 @@
 							</div>
 						</li>
 						<li class="list-surf-skate" id="list-surf-2">
-							<div class="col-md-6">
+							<div class="col-md-12">
 								<div class="scroll-list-box">
 									<div class="box-header">
 										<span class="best-for">Best for:</span>
@@ -1638,7 +1638,7 @@
 							</div>
 						</li>
 						<li class="list-surf-skate" id="list-surf-3">
-							<div class="col-md-6">
+							<div class="col-md-12">
 								<div class="scroll-list-box">
 									<div class="box-header">
 										<span class="best-for">Best for:</span>
@@ -1655,11 +1655,11 @@
 	</div>
 	<div class="container-fluid article">
 		<div class="row">
-			<div class="surf-skate-container surf-bg">
-				<div class="col-md-12 col-md-offset-1">
+			<div class="surf-skate-container skate-bg">
+				<div class="col-md-6 col-md-offset-1">
 					<ul class="scroll-list">
 						<li class="list-surf-skate" id="list-skate-1">
-							<div class="col-md-6">
+							<div class="col-md-12">
 								<div class="scroll-list-box">
 									<div class="box-header">
 										<span class="best-for">Best for:</span>
@@ -1670,7 +1670,7 @@
 							</div>
 						</li>
 						<li class="list-surf-skate" id="list-skate-2">
-							<div class="col-md-6">
+							<div class="col-md-12">
 								<div class="scroll-list-box">
 									<div class="box-header">
 										<span class="best-for">Best for:</span>
@@ -1681,7 +1681,7 @@
 							</div>
 						</li>
 						<li class="list-surf-skate" id="list-skate-3">
-							<div class="col-md-6">
+							<div class="col-md-12">
 								<div class="scroll-list-box">
 									<div class="box-header">
 										<span class="best-for">Best for:</span>
