Removed 'vh' from parrallax backgrounds
Then added full-page class to anti-roadtrip to preserve functionality

-still not working on surf-skate

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<ul class="scroll-list">
-					<li class="parallax-bg__empty" id="list-roadtrip">
+					<li class="parallax-bg__empty full-page" id="list-roadtrip">
 						<div class="circle-container" id="roadtrip-circle-1">
 							<div class="roadtrip-circle"></div>
 						</div>
@@ -642,7 +642,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__myers" id="roadtrip-2">
+					<li class="parallax-bg__myers full-page" id="roadtrip-2">
 						<div class="col-md-6"> 
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -653,7 +653,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__empty" id="roadtrip-3">
+					<li class="parallax-bg__empty full-page" id="roadtrip-3">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -664,7 +664,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__founders-grove" id="roadtrip-4">
+					<li class="parallax-bg__founders-grove full-page" id="roadtrip-4">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -675,7 +675,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__empty" id="last-roadtrip">
+					<li class="parallax-bg__empty full-page" id="last-roadtrip">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -686,7 +686,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__eternal-tree-house">
+					<li class="parallax-bg__eternal-tree-house full-page">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -1609,7 +1609,7 @@
 	</div>
 	<div class="container-fluid article">
 		<div class="row">
-			<div class="surf-skate-container surf-bg">
+			<div class="surf-skate-container full-page surf-bg">
 				<div class="col-md-6 col-md-offset-1">
 					<div class="surf-skate-title">
 						In The </br> <span class="surf-skate-title-accent">Water</span>
@@ -1655,9 +1655,9 @@
 	</div>
 	<div class="container-fluid article">
 		<div class="row">
-			<div class="surf-skate-container skate-bg">
+			<div class="surf-skate-container full-page skate-bg">
 				<div class="col-md-6 col-md-offset-1">
-					<ul class="scroll-list">
+					<ul class="scroll-list full-page">
 						<li class="list-surf-skate" id="list-skate-1">
 							<div class="col-md-12">
 								<div class="scroll-list-box">
