Updated Copy, Fit Video to Frame
Left out California Dreamers slug

--- a/index.html
+++ b/index.html
@@ -1766,12 +1766,12 @@
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>Bella Video</br>Headline TK</h1>
+				<h1>Bella Kenworthy Brings</br>Girl Power to the Skate Park</h1>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Lorem ipsum dolor sit amet, ultrices aenean dictum, repellendus duis quam dolor malesuada. Id erat sodales omnis venenatis phasellus sodales, egestas sit luctus curabitur. Laoreet accumsan suspendisse libero elit, egestas in amet orci luctus sed mollis, ligula vivamus orci aliquet dictum, turpis pede vestibulum lobortis per libero, ac vestibulum leo pretium sed at. Pede vel sed lacus adipiscing iaculis.</h2>
+				<h2>Between her pink helmet and her mad talent, 8-year-old Bella Kenworthy is hard to ignore when she hits the skate park. This skater, surfer, and second-grader has a big dream that girls will take over the skate park, and nothing can stand in her way.</h2>
 			</div>
 		</div>
 	</div>
