Dropped in Photos for Nav & ToC
+altered wording of headlines in Nav for bloggers

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 		<span class="caret"></span></li>
 	  	<div class="invisible-hover"></div>
 	  	<li class="nav-blogger"><a href="#nrthrn-blog-post">
-	  		<div class="blogger-circle"></div>
-	  		<span class="blogger-name">Brandi Riley</span></br>
-	  		Headline TK</a></li>
+	  		<div class="blogger-circle" id="brandi-nav"></div>
+	  		<span class="blogger-name">Brandi Riley's</span></br>
+	  		Guide to Northern California</a></li>
 	  	<li role="separator" class="divider"></li>
 	    <li><a href="#camp-ca">Camp California</a></li>
 	    <li role="separator" class="divider"></li>
@@ -154,9 +154,9 @@
 		<span class="caret"></span></li>
 	  	<div class="invisible-hover"></div>
 	  	<li class="nav-blogger"><a href="#cntrl-blog-post">
-	  		<div class="blogger-circle"></div>
-	  		<span class="blogger-name">Patti Cordova</span></br>
-	  		Headline TK</a></li>
+	  		<div class="blogger-circle" id="pattie-nav"></div>
+	  		<span class="blogger-name">Pattie Cordova's</span></br>
+	  		Guide to Central California</a></li>
 	  	<li role="separator" class="divider"></li>
 	     <li><a href="#eduvacation">Edu(va)cation</a></li>
 	    <li role="separator" class="divider"></li>
@@ -178,9 +178,9 @@
 		<span class="caret"></span></li>
 	  	<div class="invisible-hover"></div>
 	  	<li class="nav-blogger"><a href="#sthrn-blog-post">
-	  		<div class="blogger-circle"></div>
-	  		<span class="blogger-name">Justine Howell</span></br>
-	  		Headline TK</a></li>
+	  		<div class="blogger-circle" id="justine-nav"></div>
+	  		<span class="blogger-name">Justine Howell's</span></br>
+	  		Guide to Southern California</a></li>
 	  	<li role="separator" class="divider"></li>
 	  	<li><a href="#theme-parks">Thrills, Chills, and Enchantments</a></li>
 	    <li role="separator" class="divider"></li>
