Diamond sag added to new type treatment

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 		<h1 class="italc">State of Play</h1>
 		<p>Discover why a trip to California makes the ultimate family vacation. Explore northern, central, and southern California’s places to play.</p>
 	</div>
+	<svg class="hero-diamond" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 678.4 403">
+	<polygon class="shape" points="677.2 201.5 338.8 402.4 1 201.5 339.1 0.6 "/></svg>
 	<video autoplay loop muted>
-		<source src="video/VCA_Family_Hero_Southern_v2.webmhd.webm" type="video/webm">
-		<source src="video/VCA_Family_Hero_Southern_v2.mp4" type="video/mp4">Your browser does not support the video tag.
+		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
+		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
 	</video>
 </section>
 
