Brand Asset Placed

--- a/index.html
+++ b/index.html
@@ -816,6 +816,17 @@
 	</a>
 </section>
 
+<!-- BANNER AD 1 -->
+<section id="banner-ad-1" style="margin-bottom: 60px">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<a href="http://www.visitcalifornia.com/"><img src="assets/VCA_KidSurfing_728x90.jpg" style="width: 100%"></a>
+			</div>
+		</div>
+	</div>
+</section>
+
 <section class="region-hero full-page" id="cca-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
