Removed loop, added final photo
+Raging Waters pic
+Patti ToC sp correction

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	  			<li class="toc-blogger"><a href="#cntrl-blog-post">
 	  				<div class="blogger-circle"></div>
 	  				<div class="toc-with">with</div></br>
-	  				Patti Cordova</a></li>
+	  				Pattie Cordova</a></li>
 	  			<li class="toc-plus">More Ways to Play</li>
 			    <li><a href="#eduvacation">Edu(va)cation</a></li>
 	    		<li role="separator" class="divider"></li>
