Made responsive between monitor and laptop screen sizes

--- a/index.html
+++ b/index.html
@@ -24,14 +24,19 @@
 <script src="js/script.js"></script>
 <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 
-<section class="region-hero full-page" id="main-hero">
+<section class="hero full-page" id="main-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
-	<div class="title">
-		<h1 class="italc">State of Play</h1>
-		<p>Discover why a trip to California makes the ultimate family vacation. Explore northern, central, and southern California’s places to play.</p>
+	<div class="title-outer">
+		<div class="title-inner">
+			<div class="hero-text-wrap">
+				<h1 class="italc">State <span class="small">of</span> Play</h1>
+				<p>Discover why a trip to California makes the ultimate family vacation. Explore northern, central, and southern California’s places to play.</p>
+			</div>
+			<svg class="hero-diamond" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 678.4 403">
+				<polygon class="shape" points="677.2 201.5 338.8 402.4 1 201.5 339.1 0.6 "/>
+			</svg>
+		</div>
 	</div>
-	<svg class="hero-diamond" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 678.4 403">
-	<polygon class="shape" points="677.2 201.5 338.8 402.4 1 201.5 339.1 0.6 "/></svg>
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
 		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
@@ -182,7 +187,7 @@
 	<div class="nav-status-bar"></div>
 </section>
 
-<section class="region-hero full-page" id="nca-hero">
+<section class="hero region full-page" id="nca-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.4 203.8 341.6 2.9 "/>
@@ -803,7 +808,7 @@
 	</a>
 </section>
 
-<section class="region-hero full-page" id="cca-hero">
+<section class="hero region full-page" id="cca-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
 	<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
@@ -1195,7 +1200,7 @@
 	</div>
 </section>  
 
-<section class="region-hero full-page" id="sca-hero">
+<section class="hero region full-page" id="sca-hero">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
