Img Optimized, Captions Added, Text Reflowed
-animation on all but first photo
-arrow rotation for captions

--- a/index.html
+++ b/index.html
@@ -878,15 +878,16 @@
 				<p>About an hour away from Santa Barbara is a quaint little town called Solvang. Driving into Solvang will make you feel as though you’re stepping back in time. You will immediately get the small-town feel (it has a population of about 5,500) as you drive down its one major road and past its mom-and-pop shops and well-known bakeries. Founded by a group of Danes in 1911, the town gives you the feeling that it hasn’t changed much since then.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/pattie/visiting-oceanside.jpg">
+				<img class="img-responsive animateblock btm" src="images/pattie/visiting-oceanside.jpg">
 				<div class="caption">
-					<p>Lorem ipsum dolor amet. <span class="italc cred inline">Getty Images</span></p>
+					<p>Pattie and her crew strike a pose on a jetty.
+					</br><span class="italc cred inline no-left-margin">Courtesy of Pattie Cordova</span></p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-7">
-				<img class="over" src="images/pattie/Solvang.jpg">
+				<img class="over" src="images/pattie/solvang.jpg">
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
@@ -894,8 +895,8 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Experience a slice of history on the streets of Solvang.</p>
+					<p class="italc cred">Fox Lei/Shutterstock</p>
 				</div>
 			</div>
 		</div>
@@ -903,7 +904,7 @@
 			<div class="col-md-6">
 				<p>Solvang is still home to bakeries, restaurants, and merchants who have continued to offer a taste of Denmark through its food, landscape, and museums.</p>
 				<h5>You can find us at...</h5>
-				<p>The shoe store trying on a pair of clogs, the local bookstore peeking into the Hans Christian Andersen museum upstairs, and, of course, around Copenhagen replicas like the Little Mermaid statue and the Round Tower, taking family pictures. We’ll also be stopping by Old Mission Santa Inés near the center of town. Just outside of Solvang, we’ll stop by OstrichLand USA—a ranch where visitors can see ostriches, feed them, and even buy their eggs!</p>
+				<p>shoe store trying on a pair of clogs, the local bookstore peeking into the Hans Christian Andersen museum upstairs, and, of course, around Copenhagen replicas like the Little Mermaid statue and the Round Tower, taking family pictures. We’ll also be stopping by Old Mission Santa Inés near the center of town. Just outside of Solvang, we’ll stop by OstrichLand USA—a ranch where visitors can see ostriches, feed them, and even buy their eggs!</p>
 				<h4>Day 3</h4>
 				<h3>Central Valley</h3>
 				<p>Covering a large piece of California is the Central Valley. This area is known for producing an abundance of fresh fruits, vegetables, and greenery, coupled with its small-town feel and country atmosphere. Highway 99 will take you where you need to go, but your family will enjoy discovering off-the-beaten-path destinations the most.</p>
@@ -921,16 +922,16 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Explore the family-owned farms California's Central Valley is known for.</p>
+					<p class="italc cred">Hal Bergman/Getty Images</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Pattie's son learns to ride in the park.</p>
+					<p class="italc cred">Courtesy of Pattie Cordova</p>
 				</div>
 			</div>
 		</div>
