All images populated

--- a/index.html
+++ b/index.html
@@ -1054,20 +1054,94 @@
 				<p>For an iconic road trip, cruise up the Central California coastline. Start in Santa Barbara, a friendly town full of family fun. Don’t miss the zoo and botanic garden.</p>
 
 				<p>Hop back in the car and snake up the coast, passing historic and charming San Luis Obispo, stopping for a California history lesson at the Mission San Luis Obispo de Tolosa. Then veer onto The Pacific Coast Highway (Highway 1, or PCH as locals call it). Designate a family member as a photographer to capture the views.</p>
-
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="img-responsive" src="images/meet-cca/meet-cca1.jpg">
+				<div class="caption">
+					<p>Lorem ipsum dolor amet. <span class="italc cred inline">Getty Images</span></p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/meet-cca/meet-cca2.jpg">
+			</div>
+			<div class="col-md-5">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
+				</div>
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+					<p class="italc cred">Getty Images</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
 				<p>Just before reaching Monterey Bay, stretch your legs in Carmel-by-the-Sea. This enchanting coastal town just south of Monterey is like a California-set fairytale. Stroll the quaint streets of downtown and wander into shops and restaurants, or head to the water for a day at the beach (Carmel Beach is dog-friendly, so furry friends can get in on the fun). Golfers should make a pilgrimage to The Golf Links at the Pebble Beach Resorts, rated the number one public course in the U.S., and kids will find ample amounts of fun, including horseback riding on the beach and story time and crafts at the local library.</p>
 
 				<p>One cannot cruise up the PCH without stopping in Santa Cruz. Kids will love a trip to the Santa Cruz Beach Boardwalk, an amusement park (complete with the wooden Giant Dipper roller coaster, which first rolled out in 1924).</p>
-
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="sect-break under" src="images/meet-cca/meet-cca3.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/meet-cca/meet-cca4.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
 				<h3>Inland Exploring</h3>
 				<p>Attractions east of the coastline are just as dazzling as their oceanfront counterparts. Some of the coolest adventures might be right under your nose, as in <a href="http://www.visitcalifornia.com/feature/13-ways-go-underground-california">way underground</a>. Start with a tour of the massive underground chamber at Moaning Caverns Adventure Park—the vertical chamber is large enough to fit the Statue of Liberty. Families can go on guided walking tours into the cave, or opt to rappel down 165 feet into the cavern (best for older adventurers). Back above ground, take flight on zip lines that run above the foothills.</p>
 
 				<p>Continue heading inland to awe-inspiring Yosemite National Park. Book a room at the historic Tenaya Lodge, nicely situated as a base for exploring, and then go hiking or to attend one of the many nature talks that take place in the Yosemite Valley. Kids can participate in ranger programs, learning about the geological history of the area, or partake in an art class (all ages welcome) focused on nature.</p>
-
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/meet-cca/meet-cca6.jpg">
+			</div>
+			<div class="col-md-5 r-rail-above">
+				<img class="sect-break under" src="images/meet-cca/meet-cca5.jpg">
+			</div>
+			<div class="col-md-5">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<p>Lorem ipsum dolor sit amet.</p>
+					<p class="italc cred">Getty Images</p>
+				</div>
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<p>Lorem ipsum dolor sit amet.</p>
+					<p class="italc cred">Getty Images</p>
+				</div>
+			</div>
+		</div>	
+		<div class="row">
+			<div class="col-md-6">
 				<p>Forty miles east of Yosemite Valley sits Mono Lake (“Mono” rhymes with “yoyo,” FYI), with its otherworldly landscape of strange rock forms. The visitor center, just off U.S. 395 north of Lee Vining and Tioga Pass, offers a wealth of information and scientific exploration.</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
-				<!-- <img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg"> -->
+		</div>
+		<div class="row">
+			<div class="col-md-7">
+				<img class="over" src="images/meet-cca/meet-cca7.jpg">
 			</div>
 		</div>
 	</div>
