Final Copy Flowed + Credits Styled

--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
 						<h5>Mount Tamalpais State Park</h5>
 						<p>Although it’s a mere 45 minutes away from San Francisco, Steep Ravine feels incredibly remote. On a clear day, you can see the city’s skyline in the distance, as well as the Farallon Islands 25 miles off the coast. Pitch a tent or stay in a rustic cabin—sites for both look out on expansive ocean views perfect for watching the sunset.</p>
 						<p><span class="bold">What to do:</span> Hike or drive to nearby Stinson Beach, where lifeguards are on duty from May through mid-September. On weekends, head to the mountain’s Gravity Car Barn to learn about the sloping, winding railroad that once carried passengers down by gravity alone.</p>
+						<div class="caption">
+							<p class="italc cred">Patrick Smith/Getty Images</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -431,7 +434,10 @@
 					<div class="text-wrapper">
 						<h5>Fort Bragg</h5>
 						<p>Three miles up the coast from Fort Bragg, MacKerricher State Park showcases multiple habitats—forest, beach, dunes, bluffs, wetlands, and a collection of tide pools at the shore—around its 140-plus campsites. During whale migration season (winter and spring), MacKerricher boasts nine miles of uninterrupted coastline for spotting spouts.</p>
-						<p><span class="bold">What to do:</span> Take a ride on the historic Skunk Train, a 131-year-old engine that has chugged along the coastal “Redwood Route” since 1885. Horse lovers can get saddle time in at Ten Mile Beach or in Jackson State Forest. If the kiddos need a break from “all that nature,” take a swing at mini golf at the Emerald Dolphin Inn, and stop for a cone at Cowlick’s Ice Cream Café on the way back to camp. </p>
+						<p><span class="bold">What to do:</span> Take a ride on the historic Skunk Train, a 131-year-old engine that has chugged along the coastal “Redwood Route” since 1885. Horse lovers can get saddle time in at Ten Mile Beach or in Jackson State Forest. If the kiddos need a break from “all that nature,” take a swing at mini golf at the Emerald Dolphin Inn, and stop for a cone at Cowlick’s Ice Cream Café on the way back to camp.</p>
+						<div class="caption">
+							<p class="italc cred">Brad Mitchell/Alamy</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -452,6 +458,9 @@
 						<h5>D.L. Bliss State Park, Lake Tahoe</h5>
 						<p>It’s no wonder these lakeside campgrounds are so highly coveted given their proximity to the crystal-clear waters of Lake Tahoe. The water and all of its activities wait mere feet away from your tent. Pack warm clothes for the evenings, which tend to be chilly even during the summer months.</p>
 						<p><span class="bold">What to do:</span> Waterbugs will enjoy swimming, diving, or paddleboarding on the lake’s clear water. Or stay on land to lounge on the beach or explore miles of nearby trails—don’t miss the opportunity to snap a picture at Balancing Rock in the northwest section of the park. At the end of the day, join fellow campers at the campfire center to swap adventure stories.</p>
+						<div class="caption">
+							<p class="italc cred">SuperStock/Getty Images</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -472,6 +481,9 @@
 						<h5>Point Reyes National Seashore</h5>
 						<p>Up for an adventure? First, buy some fresh oysters at the Marshall Store, rent a kayak at Blue Waters Kayaking, and load up your gear for a one-hour paddle to the boat-in only Tomales Bay campsites. After you set up camp on the beach, hike the steep hill for a breathtaking view of Tomales Bay.</p>
 						<p><span class="bold">What to do:</span> Check out Pierce Point Ranch, where you can catch a glimpse of the nearly 400 tule elk in residence at the Tule Elk Reserve. Visitors to the Kenneth C. Patrick Visitor Center at Drakes Beach can learn about 16th-century maritime exploration and check out the minke whale skeleton on display.</p>
+						<div class="caption">
+							<p class="italc cred">Yhelfman/Getty Images</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -491,7 +503,10 @@
 					<div class="text-wrapper">
 						<h5>Sequoia-Kings Canyon National Parks</h5>
 						<p>If the words “luxury” and “camping” ever belonged in the same sentence, it would be to describe this glamping experience. The camp outfits its 330-square-foot canvas tents with plush mattresses, down feather pillows and comforters, and luxe wool area rugs.</p>
-						<p><span class="bold">What to do:</span> Bring a fly rod to cast out over nearby creeks and lakes (the camp has limited supplies available for borrowing). Book a horseback-riding excursion before you arrive. Make a checklist of local wildlife, including deer, chipmunks, hummingbirds, and marmots, and see who can spot the most! </p>
+						<p><span class="bold">What to do:</span> Bring a fly rod to cast out over nearby creeks and lakes (the camp has limited supplies available for borrowing). Book a horseback-riding excursion before you arrive. Make a checklist of local wildlife, including deer, chipmunks, hummingbirds, and marmots, and see who can spot the most!</p>
+						<div class="caption">
+							<p class="italc cred">Jerome Gorin/Getty Images</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -514,6 +529,9 @@
 						<h5>North of Boulder Creek</h5>
 						<p>Not only does Big Basin feature an incredible collection of gigantic redwoods, but the area is also home to 80 miles of trails sprinkled with gorgeous waterfalls (take the 10-mile Berry Creek Loop for a look at the cascading Berry Creek Falls). If your crew prefers a tent upgrade, you can rent a spacious “tent cabin” that sleeps four and comes with mattress pads and a wood stove.</p>
 						<p><span class="bold">What to do:</span> Enjoy the park’s 80 miles of trails, punctuated by the towering trees. For a high-flying adventure, head south to Mount Hermon Adventures Redwood Canopy Tours, where explorers ages 10+ can fly through the trees on a zip-line adventure. A lower course is available for kids as young as five.</p>
+						<div class="caption">
+							<p class="italc cred">Gary Kavanagh/Getty Images</p>
+						</div>
 					</div>
 				</div>
 			</div>
